<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.ui.add_reminder.AddReminderFragment">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/titleReminderEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/reminder_title"
        android:paddingTop="@dimen/default_padding"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/descriptionEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="top"
        android:hint="@string/description"
        android:lines="10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleReminderEditText" />

    <TextView
        android:id="@+id/addLocationTextView"
        android:layout_width="0dp"
        android:layout_height="@dimen/default_height_button"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center_vertical"
        android:text="@string/reminder_location"
        android:textColor="@color/black"
        app:drawableStartCompat="@drawable/ic_location_on_24"
        app:layout_constraintEnd_toStartOf="@id/titleLocationTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/titleLocationTextView"
        app:layout_constraintTop_toBottomOf="@id/descriptionEditText" />

    <TextView
        android:id="@+id/titleLocationTextView"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:gravity="center"
        android:textColor="@color/purple_500"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/addLocationTextView"
        app:layout_constraintEnd_toEndOf="@id/saveReminderFab"
        app:layout_constraintTop_toBottomOf="@id/descriptionEditText"
        tools:text="Location" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/saveReminderFab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/default_margin"
        android:layout_marginBottom="@dimen/default_margin"
        android:contentDescription="@string/save_reminder"
        android:src="@drawable/ic_save_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>